fixed contact button on mobile

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -396,7 +396,8 @@ header {
     }
 
     .contact-btn {
-        width: 100%;
+        width: 34.375rem;
+        max-width: 100%;
     }
 
     /* Footer */
